--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Portfolio2</title>
+    <title>Andres Robert Portfolio</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Freelancer - Start Bootstrap Theme</title>
